css/editoria11y.css
/* ... */
.ed11y-shut.ed11y-warnings #ed11y-toggle:hover {
    box-shadow: inset 0 0 0 2px var(--ed11y-warning, #fad859), inset 0 0 0 3px #000b, 0 0 0 3px #000b;
}

.ed11y-shut.ed11y-errors #ed11y-toggle {
    color: var(--ed11y-alert, #b80519);
    box-shadow: inset 0 0 0 1px var(--ed11y-alert, #b80519), inset 0 0 0 2px #fefefe, inset 0 0 0 6px var(--ed11y-alert, #b80519), 1px 1px 5px 0 rgb(0 0 0 / 50%);
    background: #fefefe;
}

.ed11y-shut.ed11y-errors #ed11y-toggle:hover {
    box-shadow: inset 0 0 0 1px #b80519, inset 0 0 0 2px #fefefe, inset 0 0 0 6px #b80519, 0 0 0 3px var(--ed11y-alert, #b80519), 0 0 0 4px transparent;
}

.ed11y-shut .toggle-count {
    display: block;
}

.ed11y-jumplinks {
    text-align: right;
    width: min(12em, 50%);
}

.ed11yjumplinks button {
    min-width: max(7.25em, calc(49% - 3px));
}

.ed11y-panel-wrapper .content button {
    padding: 7px 5px;
    border-radius: var(--ed11y-borderRadius, 1);
    background: inherit;
    color: inherit;
    border: 1px var(--ed11y-button, transparent) solid;
    margin: 5px 0 5px 1px;
}

.ed11y-jump.prev {
    min-width: 81px;
}

.ed11y-jump.next {
    min-width: 60px;
}

#ed11y-show-hidden {
    min-width: min(146px, 100%);
    margin: 0 -5px -5px;
    background: var(--ed11y-primary, #276499);
    color: var(--ed11y-primaryText, #fffdf7);
    border: 0;
}

.ed11y-panel-wrapper .next[hidden] + #show-hidden {
    margin-top: 22px;
}

#ed11y-show-hidden[aria-pressed="true"] {
    background: var(--ed11y-bg, #fffffe);
    color: var(--ed11y-text, #20160c);
    box-shadow: inset 8px 1px var(--ed11y-primary, #276499);
}

#ed11y-show-hidden:hover, #ed11y-show-hidden:focus-visible {
    color: var(--ed11y-primary, #276499);
    background: var(--ed11y-primaryText, #fffdf7);
    box-shadow: inset 8px 1px var(--ed11y-primary, #276499);
}

.ed11y-panel-wrapper .content button:hover {
    background: var(--ed11y-bg, #fffffe);
    color: var(--ed11y-text, #20160c);
    box-shadow: inset 0 0 0 1px var(--ed11y-text, #20160c);
}

.ed11y-warning {
    background: var(--ed11y-warning, #fad859);
    color: #111;
}

.ed11y-error {
    background: var(--ed11y-bgHighlight, #7b1919);
    color: #fff;
}

#ed11y-issues-tab:not(.ed11y-hidden) {
    display: flex;
    min-height: 3.25em;
    gap: 8px;
}

#ed11y-issues-tab > div {
    flex: 1 1 auto;
    align-self: center;
}

#ed11y-headings-tab, #alts-tab {
    max-height: max(240px, 50vh);
    overflow: auto;
}

#ed11y-outline, #ed11y-alt-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

#ed11y-outline li {
    padding: 5px;
}

#ed11y-outline a {
    text-decoration: none;
    display: block;
}

#ed11y-outline a:hover {
    text-decoration: underline;
}

#ed11y-alt-list li {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    padding: 8px;
    margin: 8px 0;
    box-shadow: 0 4px var(--ed11y-bg, #fffffe), 0 5px var(--ed11y-primary, #276499)22;
}

#ed11y-alt-list li span {
    flex: 0 1 calc(100% - 100px);
}

#ed11y-alt-list li img {
    flex: 0 1 80px;
    width: 80px;
    align-self: flex-start;
}



/* Result toggle button ================= */

:host(ed11y-element-result.ed11y-element) {
    position: absolute;
    opacity: 0;
    transition: opacity .25s ease-in;
    z-index: calc(var(--ed11y-buttonZIndex, 9999) - 1);
}

:host(ed11y-element-result.ed11y-element[data-ed11y-open='true']) {
    z-index: var(--ed11y-buttonZIndex, 9999);
}

.ed11y-result-wrapper {
    width: 3.14em;
    height: 3.14em;
    overflow: visible;
    color: var(--ed11y-text, #20160c);
}

.ed11y-result-wrapper button {
    font-weight: 600;
    background: var(--ed11y-primary, #276499);
}

.ed11y-result-wrapper .toggle {
    display: block;
    border: 0;
    border-radius: 50%;
    position: absolute;
    margin: 0 0 0 10px;
    z-index: 1;
    padding: 0;
    vertical-align: middle;
    cursor: pointer;
    width: 2em;
    height: 2em;
    line-height: 1;
    font-size: 1.14em;
    font-size: clamp(1.14em, 2vw, 1.5em);
}

.ed11y-result-wrapper button:focus-visible {
    outline: 2px solid transparent;
    box-shadow: inset 0 0 0 2px var(--ed11y-focusRing, #007aff), 0 0 0 3px var(--ed11y-primary, #276499);
}

.ed11y-result-wrapper .toggle {
    box-shadow: inset 0 0 0 1px var(--ed11y-alert, #b80519), inset 0 0 0 2px #fefefe, inset 0 0 0 6px var(--ed11y-alert, #b80519), 1px 1px 5px 0 rgb(0 0 0 / 50%);
    background: #fefefe;
    color: var(--ed11y-alert, #b80519);
}

.ed11y-result-wrapper .toggle:hover, .ed11y-result-wrapper .toggle[aria-expanded='true'] {
    box-shadow: inset 0 0 0 1px var(--ed11y-alert, #b80519), inset 0 0 0 2px #fefefe, inset 0 0 0 6px var(--ed11y-alert, #b80519), 0 0 0 2px var(--ed11y-primary, #276499), 0 0 0 3px transparent;
}

.ed11y-result-wrapper .toggle::before {
    content: "!";
}

.ed11y-result-wrapper .toggle.dismissed {
    box-shadow: inset 0 0 0 2px var(--ed11y-ok, #1f5381), inset 0 0 0 3px var(--ed11y-primaryText, #fffdf7), inset 0 0 0 6px var(--ed11y-ok, #1f5381), 1px 1px 5px 0 rgb(0 0 0 / 50%);
    background: var(--ed11y-ok, #1f5381);
    color: var(--ed11y-primaryText, #fffdf7);
}

.ed11y-result-wrapper .toggle.dismissed:hover, .ed11y-result-wrapper .toggle[aria-expanded='true'] {
    border: 2px solid var(--ed11y-ok, #1f5381);
}

.ed11y-result-wrapper .toggle.ok::before {
    content: "✓";
}

.ed11y-result-wrapper .toggle.dismissed.notok::before {
    content: "–";
    font-family: georgia, serif;
}

.ed11y-result-wrapper .toggle.dismissable {
    box-shadow: inset 0 0 0 2px var(--ed11y-warning, #fad859), inset 0 0 0 3px #444, inset 0 0 0 6px var(--ed11y-warning, #fad859), 1px 1px 5px 0 rgb(0 0 0 / 50%);
    background: var(--ed11y-warning, #fad859);
    color: #333;
}

.ed11y-result-wrapper .toggle.dismissable::before {
    content: "?";
}

.ed11y-result-wrapper .toggle.dismissable:hover,
.ed11y-result-wrapper .toggle.dismissable[aria-expanded='true'] {
    border: 2px solid var(--ed11y-primary, #276499);
}
/* ... */

